# reverse_tcp

./: .gitignore  LICENSE.md  README.md  config.json
.github/workflows/: docker.yml
C2_Profiles/reverse_tcp/: .env  Dockerfile  Makefile
C2_Profiles/reverse_tcp/.docker/: Dockerfile
C2_Profiles/reverse_tcp/reverse_tcp/c2_code/: Cargo.toml
C2_Profiles/reverse_tcp/reverse_tcp/c2_code/src/: error.rs  logging.rs  main.rs  server.rs
C2_Profiles/reverse_tcp/reverse_tcp/mythic/: Cargo.toml
C2_Profiles/reverse_tcp/reverse_tcp/mythic/src/: builder.rs  logging.rs  main.rs
