[package]
name = "reverse_tcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# mythic-grpc = { git = "https://github.com/thespicybyte/mythic_grpc", branch = "dev"}
mythic-grpc = { github = "https://github.com/thespicybyte/mythic_grpc" }
tokio = { version = "1.0", features = ["full"] }
